frontend/geolocview/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: gcr.io/third-nature-400716/frontend:a165652587b60fdc254e2b57be79f914a60c79aa
        ports:
        - containerPort: 8080 # Replace with your frontend container's port
