frontend/geolocview/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: geolocview
spec:
  rules:
  - host: devopsbootcamp.dev
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 8080
